--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -14,7 +14,7 @@ showWarningOnDirectExecution = false
 
 [theme]
 primaryColor = "#217EEC"
-backgroundColor = "#353935"
+backgroundColor = "#FFFFFF"
 secondaryBackgroundColor = "#F0F2F6"
 textColor = "#262730"
 font = "sans serif"
